--- a/spring-cloud-alibaba-consumer-nacos-8002/src/main/resources/application.yml
+++ b/spring-cloud-alibaba-consumer-nacos-8002/src/main/resources/application.yml
@@ -1,3 +1,13 @@
+server:
+  port: 8002
 spring:
-  profiles:
-    active: dev
+  application:
+    name: spring-cloud-alibaba-consumer
+#  profiles:
+#    active: dev
+logging:
+  level:
+    com.example.springcloudalibabaconsumernacos8002: debug
+feign:
+  sentinel:
+    enabled: true
