--- a/spring-cloud-alibaba-consumer-nacos-8002/src/main/resources/bootstrap.yml
+++ b/spring-cloud-alibaba-consumer-nacos-8002/src/main/resources/bootstrap.yml
@@ -1,5 +1,3 @@
-server:
-  port: 8002
 spring:
   application:
     name: spring-cloud-alibaba-consumer
@@ -10,9 +8,7 @@ spring:
       config:
         server-addr: 127.0.0.1:1111 #Nacos作为配置中心地址
         file-extension: yaml #指定yaml格式的配置
-logging:
-  level:
-    com.example.springcloudalibabaconsumernacos8002: debug
-#spring-cloud-alibaba-provider:
-#  ribbon:
-#    NFLoadBaIancerRu1eCIassName: com.tulingxueyuan.ribbon.ruIe.CustomRuIel
+        namespace: 01f35de1-e593-4538-be55-0ad511882876
+feign:
+  sentinel:
+    enabled: true
